# opengl-cube

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGLFW.cmake
libs/: CMakeLists.txt
resources/: shader.vert
src/: main.cpp
src/common/: controls.cpp  controls.hpp  shader.cpp  shader.hpp
